create send mail

--- a/index.html
+++ b/index.html
@@ -254,6 +254,17 @@
 					<!-- skill 5 -->
 					<div class="skill-box">
 						<div class="skill-info">
+							<h2>React</h2>
+							<h2>55%</h2>
+						</div>
+						<div class="skill-outter-line">
+							<div class="skill-inner-line" style="width: 55%"></div>
+						</div>
+					</div>
+
+					<!-- skill 6 -->
+					<div class="skill-box">
+						<div class="skill-info">
 							<h2>Tilda</h2>
 							<h2>85%</h2>
 						</div>
@@ -534,9 +545,9 @@
 					</div>
 					<!-- right col -->
 					<div class="contacts-rifht">
-						<form action="">
+						<form action="" id="form">
 							<div class="wave-group">
-								<input required="" type="text" class="input" />
+								<input type="text" class="input" name="name" />
 								<span class="bar"></span>
 								<label class="label">
 									<span class="label-char" style="--index: 0">N</span>
@@ -546,7 +557,7 @@
 								</label>
 							</div>
 							<div class="wave-group">
-								<input required="" type="text" class="input" />
+								<input type="text" class="input" name="email" />
 								<span class="bar"></span>
 								<label class="label">
 									<span class="label-char" style="--index: 0">M</span>
