--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<section id="home">
 				<div class="home-row">
 					<h1>Hi, This is<br />Micle Kalachev<span>.</span></h1>
-					<p>i am a <span class="auto-input"></span></p>
+					<p>I am a <span class="auto-input"></span></p>
 				</div>
 			</section>
 
