last update page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;800&family=Rubik+Burned&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Portfolio</title>
 	</head>
 	<body>
@@ -74,7 +80,7 @@
 			<section id="home">
 				<div class="home-row">
 					<h1>Hi, This is<br />Micle Kalachev<span>.</span></h1>
-					<p>I am a <span class="auto-input"></span></p>
+					<p>i am a <span class="auto-input"></span></p>
 				</div>
 			</section>
 
@@ -84,10 +90,10 @@
 				<h1 class="sub-about">About Me</h1>
 				<div class="divider"></div>
 				<p class="sub-para">
-					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia
-					expedita sunt magnam consequuntur. Modi accusantium iste nesciunt
-					corporis placeat nobis ratione doloribus a optio saepe eligendi
-					voluptates libero, id porro!
+					Постоянно развиваюсь в области Frontend разработки, готов решать
+					сложные, интересные задачи, которые будут развивать компанию. Владею
+					навыками многозадачности, занимаю активную жизненную позицию,
+					командный игрок.
 				</p>
 
 				<div class="about-col">
@@ -168,7 +174,7 @@
 					<!-- Fact box 1 -->
 					<div class="fact-box">
 						<i class="fa-regular fa-face-smile"></i>
-						<strong>10+</strong>
+						<strong>50+</strong>
 						<p>Happy Clients</p>
 					</div>
 					<!-- Fact box 2 -->
@@ -186,7 +192,7 @@
 					<!-- Fact box 4 -->
 					<div class="fact-box">
 						<i class="fa-regular fa-file-code"></i>
-						<strong>10+</strong>
+						<strong>50+</strong>
 						<p>Project Completed</p>
 					</div>
 				</div>
@@ -243,26 +249,15 @@
 					<!-- skill 4 -->
 					<div class="skill-box">
 						<div class="skill-info">
-							<h2>Web Designed</h2>
-							<h2>15%</h2>
+							<h2>Type Script</h2>
+							<h2>65%</h2>
 						</div>
 						<div class="skill-outter-line">
-							<div class="skill-inner-line" style="width: 15%"></div>
+							<div class="skill-inner-line" style="width: 65%"></div>
 						</div>
 					</div>
 
 					<!-- skill 5 -->
-					<div class="skill-box">
-						<div class="skill-info">
-							<h2>React</h2>
-							<h2>55%</h2>
-						</div>
-						<div class="skill-outter-line">
-							<div class="skill-inner-line" style="width: 55%"></div>
-						</div>
-					</div>
-
-					<!-- skill 6 -->
 					<div class="skill-box">
 						<div class="skill-info">
 							<h2>Tilda</h2>
@@ -270,6 +265,17 @@
 						</div>
 						<div class="skill-outter-line">
 							<div class="skill-inner-line" style="width: 85%"></div>
+						</div>
+					</div>
+
+					<!-- skill 6 -->
+					<div class="skill-box">
+						<div class="skill-info">
+							<h2>Node JS</h2>
+							<h2>55%</h2>
+						</div>
+						<div class="skill-outter-line">
+							<div class="skill-inner-line" style="width: 55%"></div>
 						</div>
 					</div>
 				</div>
@@ -545,9 +551,9 @@
 					</div>
 					<!-- right col -->
 					<div class="contacts-rifht">
-						<form action="" id="form">
+						<form action="">
 							<div class="wave-group">
-								<input type="text" class="input" name="name" />
+								<input required="" type="text" class="input" />
 								<span class="bar"></span>
 								<label class="label">
 									<span class="label-char" style="--index: 0">N</span>
@@ -557,7 +563,7 @@
 								</label>
 							</div>
 							<div class="wave-group">
-								<input type="text" class="input" name="email" />
+								<input required="" type="text" class="input" />
 								<span class="bar"></span>
 								<label class="label">
 									<span class="label-char" style="--index: 0">M</span>
