delete social icons

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 					<img src="img/self.jpeg" alt="logo" />
 				</a>
 				<h1>Михаил Калачев</h1>
-				<div class="social-icons">
-					<a href="#" class="header__nal-link"
-						><i class="fa-brands fa-facebook"></i
-					></a>
+				<!-- <div class="social-icons">
 					<a href="#" class="header__nal-link"
 						><i class="fa-brands fa-instagram"></i
 					></a>
@@ -32,7 +29,7 @@
 					<a href="#" class="header__nal-link"
 						><i class="fa-brands fa-linkedin"></i
 					></a>
-				</div>
+				</div> -->
 			</div>
 
 			<nav>
