last change last last

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 									Занимаюсь разработкой сайтов и Вэб систем уже три года.
 									Постоянно развиваюсь в области Frontend разработки и не
 									только: имею опыт работы с BackEnd ("PHP", "Phyton"), а так же
-									опыт работы с SQL & NoSQL БД. готов решать сложные, которые
-									будут развиваться мне и приносить пользу компании. Занимаю
-									активную жизненную позицию, хорошо работаю в условиях
-									неопределенности, умею работать в команде.
+									опыт работы с SQL & NoSQL БД. готов решать сложные задачи,
+									которые будут помогать развиваться мне и приносить пользу
+									компании. Занимаю активную жизненную позицию, хорошо работаю в
+									условиях неопределенности, умею работать в команде.
 								</p>
 							</div>
 							<!-- right side list -->
