--- a/index.html
+++ b/index.html
@@ -335,7 +335,18 @@
 						<div class="my-edu">
 							<h3>Result-Scool</h3>
 							<span class="sp-box">2023- по настоящее время</span>
-							<p>Front-End Developer</p>
+
+							<p>
+								Front-End Developer ссылка на
+								<span
+									><a
+										class="sert_link"
+										href="https://lk.result.school/pl/277197169?gcmes=50633923997"
+										target="_blank"
+										>Сертификат</a
+									></span
+								>
+							</p>
 						</div>
 
 						<div class="my-edu">
