--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 			<!-- ------------------------------------------------------------------------------------- -->
 			<!-- ======== SECTION RESUME START ========= -->
 			<section id="resume">
-				<h1 class="sub-heading">RESUME</h1>
+				<h1 class="sub-heading">Резюме</h1>
 				<div class="divider"></div>
 
 				<div class="resume-row">
@@ -379,7 +379,7 @@
 						<h2>Профессиональный опыт</h2>
 						<div class="pro-exp">
 							<h3>Фриланс</h3>
-							<p>Junior Front-End developer</p>
+							<p>Front-End developer</p>
 							<span class="sp-box">2022-2023</span>
 							<ul>
 								<li>Доработка сайта charm travel</li>
@@ -391,7 +391,7 @@
 
 						<div class="pro-exp">
 							<h3>Garpix</h3>
-							<p>Junior Front-End developer</p>
+							<p>Front-End developer</p>
 							<span class="sp-box">2021-2022</span>
 							<ul>
 								<li>Разработка сайта для программы стажировки в компании</li>
@@ -408,7 +408,7 @@
 
 			<!-- ========= SECTION PORTFOLIO START ========== -->
 			<section id="portfolio">
-				<h1 class="sub-heading">Portfolio</h1>
+				<h1 class="sub-heading">Портфолио</h1>
 				<div class="divider"></div>
 				<p class="sub-para">
 					Ниже представлены работы выполненные мною на различных проектах.
